# task_scheduler

./: .gitignore  CMakeLists.txt  README.md  concurrent_queue.h  main.cpp  thread_pool.h
examples/: main.cpp
examples/matrix_multiplication/: CMakeLists.txt  main.cpp
examples/monte_carlo_pi/: CMakeLists.txt  main.cpp
examples/priority_tasks/: CMakeLists.txt  main.cpp
examples/simple/: CMakeLists.txt  main.cpp
include/: concurrent_queue.h  thread_pool.h  visualizer.h
src/: thread_pool.cpp  visualizer.cpp
